[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialog_plugin/assets/Themes/styleboxflat_title_header.tres" type="StyleBox" id=1]
[ext_resource path="res://addons/dialog_plugin/Editor/Views/variable_editor/new_variable_popup.gd" type="Script" id=2]
[ext_resource path="res://addons/dialog_plugin/Editor/Views/variable_editor/option_type_button.gd" type="Script" id=3]
[ext_resource path="res://addons/dialog_plugin/Editor/Views/variable_editor/DefinitionEditorView.gd" type="Script" id=4]

[node name="DefinitionEditorView" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -381.665, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
NewItemPopup_path = NodePath("NewItemPopup")
VarListContainer_path = NodePath("ScrollContainer/VariableListContainer")

[node name="Title" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = ExtResource( 1 )

[node name="Label" type="Label" parent="Title"]
margin_left = 462.0
margin_top = 9.0
margin_right = 561.0
margin_bottom = 23.0
size_flags_horizontal = 4
text = "Variables Editor"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="VariableListContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_top = 564.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 29.0

[node name="Add" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 22.0
text = "Add Variable"

[node name="Save" type="ToolButton" parent="PanelContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 156.0
margin_bottom = 22.0
text = "Save all"

[node name="NewItemPopup" type="ConfirmationDialog" parent="."]
margin_top = 508.0
margin_right = 197.0
margin_bottom = 600.0
rect_min_size = Vector2( 170, 92 )
popup_exclusive = true
window_title = "Por favor, Confirma..."
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
TextNode_path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/LineEdit")
TypeButton_path = NodePath("MarginContainer/VBoxContainer/HBoxContainer/OptionButton")

[node name="MarginContainer" type="MarginContainer" parent="NewItemPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewItemPopup/MarginContainer"]
margin_right = 181.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="NewItemPopup/MarginContainer/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 14.0
text = "Nombre de la variable:"

[node name="HBoxContainer" type="HBoxContainer" parent="NewItemPopup/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1008.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 885.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 889.0
margin_right = 893.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 897.0
margin_top = 5.0
margin_right = 931.0
margin_bottom = 19.0
text = "Type:"

[node name="OptionButton" type="OptionButton" parent="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 935.0
margin_right = 1008.0
margin_bottom = 24.0
text = "Variant"
flat = true
items = [ "Variant", null, false, 0, 27, "Boolean", null, false, 1, 1, "Integer", null, false, 2, 2, "Float", null, false, 3, 3, "String", null, false, 4, 4 ]
selected = 0
script = ExtResource( 3 )

[connection signal="pressed" from="PanelContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="confirmed" from="NewItemPopup" to="." method="_on_NewItemPopup_confirmed"]
[connection signal="visibility_changed" from="NewItemPopup" to="NewItemPopup" method="_on_visibility_changed"]
[connection signal="text_entered" from="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="NewItemPopup" method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="NewItemPopup/MarginContainer/VBoxContainer/HBoxContainer/OptionButton" to="NewItemPopup" method="_on_OptionButton_item_selected"]
